# kbcut

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-13-kbcut-portability.md
docs/superpowers/specs/: 2026-07-13-kbcut-portability-design.md
packaging/: 99-kbcut-uinput.rules  kbcut.service
src/: clipboard.rs  config.rs  daemon.rs  inject.rs  keymap.rs  main.rs  setup.rs
src/layout/: backends.rs  mod.rs  registry.rs
