[package]
name = "kbcut"
version = "0.2.0"
edition = "2021"
description = "Seamless text replacement for Linux (Wayland-friendly), like macOS text shortcuts"
license = "MIT"
repository = "https://github.com/hhpmacedo/kbcut"
readme = "README.md"
keywords = ["text-expansion", "wayland", "uinput", "keyboard", "snippets"]
categories = ["command-line-utilities"]

[dependencies]
evdev = "0.12"
xkbcommon = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6"
anyhow = "1"
dirs = "5"

[profile.release]
lto = true
strip = true
